--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,3 +5,20 @@ html, body {
   width: 100%;
   height: 100%;
 }
+
+.bg-img {
+  padding-top: 10px;
+  .container .row .weather-module {
+    text-align: center;
+    padding: 10px 0;
+    background: rgba(255,255,255,0.7);
+    font-size: 1.5em;
+    border-radius: 2px;
+    border: solid black 2px;
+    margin: -2px -1px;
+
+    div:first-child {
+      font-size: 1.6em;
+    }
+  }
+}
