--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,15 @@
+<%= stylesheet_link_tag 'pages' %>
+
 <style>
-  .bg-img {
+  body {
     width: 100%;
     height: 100%;
     background: url(<%= @post_url %>) center center no-repeat;
     background-size: cover;
+    background-attachment: fixed;
   }
 </style>
+
 
 <div class="bg-img">
   <div class="container">
@@ -15,24 +19,28 @@
         <div><%= @weather_display[0][:time] %></div>
         <div><%= @weather_display[0][:temp] %>&deg;F</div>
         <div><%= @weather_display[0][:description] %></div>
+        <i class="owf owf-<%= @weather_display[0][:id]%>"></i>
       </div>
       <div class="col-md-3 weather-module">
         <div><%= @weather_display[1][:date]%></div>
         <div><%= @weather_display[1][:time] %></div>
         <div><%= @weather_display[1][:temp] %>&deg;F</div>
         <div><%= @weather_display[1][:description] %></div>
+        <i class="owf owf-<%= @weather_display[1][:id]%>"></i>
       </div>
       <div class="col-md-3 weather-module">
         <div><%= @weather_display[2][:date]%></div>
         <div><%= @weather_display[2][:time] %></div>
         <div><%= @weather_display[2][:temp] %>&deg;F</div>
         <div><%= @weather_display[2][:description] %></div>
+        <i class="owf owf-<%= @weather_display[2][:id]%>"></i>
       </div>
       <div class="col-md-3 weather-module">
         <div><%= @weather_display[3][:date]%></div>
         <div><%= @weather_display[3][:time] %></div>
         <div><%= @weather_display[3][:temp] %>&deg;F</div>
         <div><%= @weather_display[3][:description] %></div>
+        <i class="owf owf-<%= @weather_display[3][:id]%>"></i>
       </div>
     </div>
   </div>
