--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,21 +1,37 @@
 .bg-img {
   padding-top: 2em;
+
+  .weather-title {
+    text-align: center;
+    background: rgba(255,255,255,0.6);
+    width: calc(100% - 8px);
+    font-size: 1.25em;
+    margin-bottom: 20px;
+    border-radius: 15px;
+  }
+
   .container .row .weather-module {
+    box-sizing: border-box;
     text-align: center;
     padding: 10px 0;
     background: rgba(255,255,255,0.7);
     font-size: 1.5em;
-    border-radius: 2px;
     border: solid black 2px;
-    margin: -2px -1px;
+    margin: -2px 0px -2px -2px;
 
     div:first-child {
-      font-size: 1.6em;
+      font-size: 1.25em;
     }
 
     i {
       margin-top: 10px;
-      font-size: 3em;
+      font-size: 2.5em;
     }
+  }
+
+  .location {
+    background: rgba(255,255,255,0.7);
+    text-align: center;
+    font-size: 1.25em;
   }
 }
